# rust-xrecord-echo

./: Cargo.toml  Makefile  README.md  start  xrecord-echo.service
src/: main.rs
src/x11wrapper/: mod.rs  window.rs
xrecord-echo/: Cargo.toml
xrecord-echo/src/: main.rs
xrecord-echo/src/x11wrapper/: display.rs  window.rs
