[package]
name = "rust-selftop"
version = "0.1.0"
authors = ["Alexey Kolmakov <alxkolm@bk.ru>"]

[dependencies]
libc = "*"
nanomsg = "^0.3.4"
time = "0.1"
lazy_static = "0.1.*"
rustc-serialize = "0.3"

[dependencies.x11]
git = "https://github.com/alxkolm/x11-rs.git"
branch = "xrecord-wip"
features = ["xlib", "xrecord"]
