[package]
name = "xrecord-echo"
version = "0.1.1"
authors = ["Alexey Kolmakov <alxkolm@bk.ru>"]

[dependencies]
libc = "0.2.2"
nanomsg = "^0.6.1"
time = "0.1"
lazy_static = "0.1.*"
rustc-serialize = "0.3"

[dependencies.x11]
git = "https://github.com/alxkolm/x11-rs.git"
branch = "xrecord-wip"
features = ["xlib", "xrecord"]
